<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Ways">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:background="@color/floorColor"
        android:clickable="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginStart="16dp"
            android:contentDescription="@string/menu_description"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_ways" />

        <TextView
            android:id="@+id/ways"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/noto_serif"
            android:text="@string/header_ways"
            android:textColor="#2E2E2E"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2"
        app:layout_constraintVertical_bias="0.0">

        <Spinner
            android:id="@+id/spinnerFrom"
            android:layout_width="129dp"
            android:layout_height="32dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="50dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/spinnerTo"
            android:layout_width="129dp"
            android:layout_height="32dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="50dp"
            app:layout_constraintStart_toEndOf="@+id/spinnerFrom"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/accept"
            android:layout_width="64dp"
            android:layout_height="52dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="10dp"
            android:text="@string/accept"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/to"
            android:textColor="#000000"
            app:layout_constraintBottom_toTopOf="@+id/spinnerTo"
            app:layout_constraintEnd_toEndOf="@+id/spinnerTo"
            app:layout_constraintStart_toStartOf="@+id/spinnerTo" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/from"
            android:textColor="#000000"
            app:layout_constraintBottom_toTopOf="@+id/spinnerFrom"
            app:layout_constraintEnd_toEndOf="@+id/spinnerFrom"
            app:layout_constraintStart_toStartOf="@+id/spinnerFrom" />

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/accept">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textFirst"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:text=""
                    android:textColor="#000000"
                    android:textSize="16sp" />

                <com.jsibbold.zoomage.ZoomageView
                    android:id="@+id/imgWide"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:adjustViewBounds="true">

                </com.jsibbold.zoomage.ZoomageView>

                <TextView
                    android:id="@+id/textSecond"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:textColor="#000000"
                    android:textSize="16sp">

                </TextView>

                <com.jsibbold.zoomage.ZoomageView
                    android:id="@+id/imgWide2"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:adjustViewBounds="false">

                </com.jsibbold.zoomage.ZoomageView>
            </LinearLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>